--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -7,14 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Recently</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="__PUBLIC__/css/bootstrap.min.css" rel="stylesheet">
 
 <link rel="icon" href="share.ico" type="image/x-icon" />
-    <link href="css/good.css" rel="stylesheet">
+    <link href="__PUBLIC__/css/good.css" rel="stylesheet">
     <link rel="stylesheet" href="https://teamemo.com/static/bower_components/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://teamemo.com/static/styles/landingpage-cf092c3767.css">
-    <script src="js/jquery-1.11.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="__PUBLIC__/js/jquery-1.11.1.min.js"></script>
+    <script src="__PUBLIC__/js/bootstrap.min.js"></script>
 
 
     <!-- 这里是summernote的必要文件-->
@@ -26,8 +26,8 @@
 
     <!-- 这里是summernote的必要文件-->
     <!--自定义的css-->
-    <link href="css/good.css" rel="stylesheet">
-    <link href="css/someone.css" rel="stylesheet">
+    <link href="__PUBLIC__/css/good.css" rel="stylesheet">
+    <link href="__PUBLIC__/css/someone.css" rel="stylesheet">
     <!--自定义的css-->
 </head>
 
@@ -47,13 +47,13 @@
                 <div class="navbar-collapse collapse in" id="navcol-1" aria-expanded="true" style>
                     <ul class="nav navbar-nav navbar-right">
                         <li role="presentation" class="active"><a href="#" aria-controls="home" role="tab">主页</a></li>
-                        <li role="presentation" class=""><a href="publish.html" aria-controls="publish" role="tab">我的</a></li>
-                        <li role="presentation" class=""><a href="share.html" aria-controls="share" role="tab">分享</a></li>
+                        <li role="presentation" class=""><a href="{:url('index/publish/index')}" aria-controls="publish" role="tab">我的</a></li>
+                        <li role="presentation" class=""><a href="{:url('index/share/index')}" aria-controls="share" role="tab">分享</a></li>
                         <li role="presentation" class="dropdown">
-                            <a href="Login.html" class="dropdown-toggle" aria-controls="login" role="tab" data-toggle="tab dropdown">登陆</a>
+                            <a href="{:url('index/login/index')}" class="dropdown-toggle" aria-controls="login" role="tab" data-toggle="tab dropdown">登陆</a>
                             <ul class="dropdown-menu submenu">
                                 <li>
-                                    <a href="Login.html">注册</a>
+                                    <a href="{:url('index/login/index')}">注册</a>
                                 </li>
                             </ul>
                         </li>
