--- a/application/index/view/detail/index.html
+++ b/application/index/view/detail/index.html
@@ -7,23 +7,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>这是一篇很好的文章</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="__PUBLIC__/css/bootstrap.min.css" rel="stylesheet">
 
-<link rel="icon" href="share.ico" type="image/x-icon" />
+<link rel="icon" href="__PUBLIC__/share.ico" type="image/x-icon" />
 
 
 
-    <script src="js/bootstrap.min.js"></script>
+    <script src="__PUBLIC__/js/bootstrap.min.js"></script>
 
 
     <link rel="stylesheet" href="https://teamemo.com/static/bower_components/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://teamemo.com/static/styles/landingpage-cf092c3767.css">
-    <script src="js/jquery-1.11.1.min.js"></script>
+    <script src="__PUBLIC__/js/jquery-1.11.1.min.js"></script>
 
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">
 
-    <link href="css/good.css" rel="stylesheet">
-    <link href="css/someone.css" rel="stylesheet">
+    <link href="__PUBLIC__/css/good.css" rel="stylesheet">
+    <link href="__PUBLIC__/css/someone.css" rel="stylesheet">
     <style>
       
     </style>
@@ -31,40 +31,7 @@
 
 <body>
     <div>
-        <div class="navbar navbar-default navbar-fixed-top headerTopBack">
-            <div class="container">
-                <div class="navbar-header">
-                    <a class="navbar-brand navbar-link" href="index.html">Recently</a>
-                    <button class="navbar-toggle" data-toggle="collapse" data-target="#navcol-1" aria-expanded="true">
-                        <span class="sr-only">Toggle Navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                </div>
-                <div class="navbar-collapse collapse in" id="navcol-1" aria-expanded="true" style>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li role="presentation">
-                            <a href="index.html" aria-controls="home" role="tab">主页</a>
-                        </li>
-                        <li role="presentation" class="">
-                            <a href="publish.html" aria-controls="home" role="tab">我的</a>
-                        </li>
-                        <li role="presentation" class="active">
-                            <a href="share.html" aria-controls="home" role="tab">分享</a>
-                        </li>
-                        <li role="presentation" class="dropdown">
-                            <a href="Login.html" class="dropdown-toggle" aria-controls="home" role="tab" data-toggle="tab dropdown">登录</a>
-                            <ul class="dropdown-menu submenu">
-                                <li>
-                                    <a href="Login.html">注册</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+        {include file="/common/nav"}
         <div id="main-layout" class="layout no-sidebar">
             <div id="wrapper">
 
@@ -84,7 +51,7 @@
                 <div class="A3">
                     <div class="A3-top">
                         <div class="A3-image">
-                            <img src="images/image1-01.jpg" alt="post an image with animation" title="post an image with animation">
+                            <img src="__PUBLIC__/images/image1-01.jpg" alt="post an image with animation" title="post an image with animation">
                         </div>
 
                     </div>
@@ -121,29 +88,7 @@
                 </div>
             </div>
         </div>
-        <footer style="margin-top:50px">
-                <div class="row">
-                    <div class="col-md-4 col-sm-6 footer-navigation">
-                        <h3><a href="/" style="display:inline-block">Recently</a></h3>
-                        <p class="links"><a href="index.html">Home</a><b> · </b><a target="_blank" href="publish.html">Publish</a><b>
-                                · </b><a href="share.html">Share</a><b>
-                      
-                    </div>
-                    <div class="col-md-4 col-sm-6 footer-contacts">
-                        <div><span class="fa fa-map-marker footer-contacts-icon"> </span>
-                            <p><span class="new-line-span">浙江绍兴</span>邮编：1213123</p>
-                        </div>
-                        <div><i class="fa fa-envelope footer-contacts-icon"></i>
-                            <p> <a href="mailto:info@teamemo.com" target="_blank">email： dasfdas@.com</a></p>
-                        </div>
-                    </div>
-                    <div class="clearfix visible-sm-block"></div>
-                    <div class="col-md-4 footer-about">
-                        <h4>About the Team</h4>
-                        <p>Here you can share your latest achievements, make your plans and communicate with others</p>
-                    </div>
-                </div>
-            </footer>
+        {include file="/common/footer"}
     </div>
 </body>
 
