--- a/application/index/view/login/index.html
+++ b/application/index/view/login/index.html
@@ -7,12 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>注册</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="__PUBLIC__/css/bootstrap.min.css" rel="stylesheet">
 
 
-<link rel="icon" href="share.ico" type="image/x-icon" />
-    <script src="js/jquery-1.11.1.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+<link rel="icon" href="__PUBLIC__/share.ico" type="image/x-icon" />
+    <script src="__PUBLIC__/js/jquery-1.11.1.js"></script>
+    <script src="__PUBLIC__/js/bootstrap.min.js"></script>
     <style>
         html {
             font-family: sans-serif;
@@ -39,12 +39,11 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: url("images/bg_note_coffee.jpg");
+            background: url("__PUBLIC__/images/bg_note_coffee.jpg");
             background-size: cover;
             background-repeat: no-repeat;
             z-index: -1;
             overflow: hidden;
-            background-size: cover !important;
             height: 700px;
         }
 
@@ -229,44 +228,19 @@
             margin-bottom: -2px;
         }
     </style>
+    <script type="text/javascript">
+        $(function(){
+            $(".nav").children("li").each(function(){
+                $(this).removeClass("active");
+            })
+            $(".login").addClass("active");
+        })
+    </script>
 </head>
 
 <body>
     <div>
-        <div class="navbar navbar-default navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <a class="navbar-brand navbar-link" href="index.html">Recently</a>
-                    <button class="navbar-toggle" data-toggle="collapse" data-target="#navcol-1" aria-expanded="true">
-                        <span class="sr-only">Toggle Navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                </div>
-                <div class="navbar-collapse collapse in" id="navcol-1" aria-expanded="true" style>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li role="presentation">
-                            <a href="index.html" aria-controls="home" role="tab">主页</a>
-                        </li>
-                        <li role="presentation" class="">
-                            <a href="publish.html" aria-controls="home" role="tab">我的</a>
-                        </li>
-                        <li role="presentation" class="">
-                            <a href="share.html" aria-controls="home" role="tab">分享</a>
-                        </li>
-                        <li role="presentation" class="dropdown active">
-                            <a href="index.html" class="dropdown-toggle" aria-controls="home" role="tab" data-toggle="tab dropdown">登录</a>
-                            <ul class="dropdown-menu submenu">
-                                <li>
-                                    <a href="index.html">注册</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+        {include file="/common/nav"}
         <div id="main-layout" class="layout no-sidebar">
             <div id="wrapper">
                 <div id="page-content-wrapper">
